--- a/Case Study Trevor.Rmd
+++ b/Case Study Trevor.Rmd
@@ -33,7 +33,8 @@ data <- data_raw %>%
             as.factor) %>%
   # cyclinders has one factor, remove mfg_month and mfg_year as basically same as age
   select(-c(Cylinders, Mfg_Month, Mfg_Year)) %>%
-  drop_na()
+  drop_na() %>%
+  mutate(Price = log(Price))
 head(data)
 
 cont_predictors = c("Age", "KM", "HP", "CC", 
@@ -276,10 +277,11 @@ kcv_2 = kfold(fit_subset2_default, folds = folds)
 kcv_3 = kfold(fit_subset3_default, folds = folds)
 kcv_4 = kfold(fit_subset4_default, folds = folds)
 kcv_5 = kfold(fit_subset5_default, folds = folds)
-loo_compare(kcv_1, kcv_2, kcv_3, kcv_4, kcv_5)
-
 ```
 
+```{r}
+loo_compare(kcv_1, kcv_2, kcv_3, kcv_4, kcv_5)
+```
 
 
 
