--- a/analysisSection.Rmd
+++ b/analysisSection.Rmd
@@ -1,13 +1,91 @@
 ---
-title: "Analysis Section"
-author: "Adam Kiehl"
+title: "STAA 551 Case Study"
+author: "Trevor Isaacson, Runze Jiang, Adam Kiehl"
 date: "2022-10-11"
 output: pdf_document
 ---
 
-```{r setup, include=FALSE}
+```{r setup, include=FALSE, message=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library(tidyverse)
+library(GGally)
+library(rstanarm)
+library(ggthemes)
+library(scales)
+library(knitr)
+library(kableExtra)
+
+options(scipen=999)
 ```
+
+```{r, include=FALSE, message=FALSE}
+# read data from .csv file
+data_raw <- read.csv('ToyotaCorollaData.csv')
+
+data <- data_raw %>%
+  # factor categorical predictors
+  mutate_at(c('Metallic', 'Automatic', 'Doors', 'Cylinders', 'Gears', 
+              'Guarantee', 'BOVAG', 'Fuel_Type', 'Mfg_Month', 'Mfg_Year'),
+            as.factor) %>%
+  # remove singular predictor
+  select(-Cylinders)
+```
+
+# Introduction
+
+Consumers shopping for new cars often have the option to trade in their current car for money towards their new one. Dealerships, in turn, sell the used cars at a slightly higher price. To do this effectively, the dealership must be able to accurately estimate the expected price that it can sell each used car for based only on characteristics of the car. 
+
+```{r, echo=FALSE}
+ggplot(data,
+       mapping = aes(x = Price)) +
+  geom_histogram(binwidth = 1000) +
+  theme_tufte(base_family = 'sans') +
+  scale_x_continuous(labels = label_dollar(prefix = '$')) +
+  scale_y_continuous(breaks = seq(0, 100, by = 25)) +
+  labs(title = 'Distribution of Used Toyota Corolla Sales Prices (Figure 1)',
+       x = 'Sales Price',
+       y = 'Count')
+```
+
+A Toyota dealership was interested in fitting a regression model to estimate `Price` (Figure 1) using $16$ different predictor variables and a data set of $694$ used Toyota Corolla sales. Numeric predictors included `Age`, `KM` (odometer reading), `HP` (horsepower), `CC` (cylinder volume), `QuartTax` (quarterly road tax), `Weight` and `Period` (guarantee period). Categorical variables included `Mfg_Month` (manufacturing month), `Mfg_Year` (manufacturing year from 1999-2004), `Fuel_type` (CNG, Diesel, or Petrol), `Metallic`, `Automatic`, `Doors` (3, 4, or 5), `Gears` (5 or 6), `Guarantee` (manufacturer's guarantee), and `BOVAG` (BOVAG guarantee). The `Cylinders` predictor was removed from the original data set because all recorded cars had $4$ cylinders, and all categorical predictors were made into factors in `R`. No other cleaning was performed on the data. 
+
+\newpage
+
+A set of practical predictors of interest were chosen based on contextual knowledge and exploratory data visualizations to use for model fitting separately of any formal variable selection techniques. Intuitively, older cars (indicated by `Age` and `KM`) should be worth less and larger and more powerful cars (indicated by `Weight` and `HP`, respectively) should be worth more. It was assumed that cars that take different fuel types (`Fuel_Type`) are likely different kinds of cars and would likely vary in price in some way. Finally, `Guarantee`, `BOVAG`, and `Period` are financial-based incentives that should also intuitively lead to a higher car price. Summary statistics (Table 1) and plots (Figure 2) for these predictors of interest are shown below.
+
+```{r, echo=FALSE, message=FALSE}
+data %>%
+  select(c(Price, Age, KM, Fuel_Type, HP, QuartTax, Weight, Guarantee, BOVAG, 
+           Period)) %>%
+  mutate_if(is.factor, as.numeric) %>%
+  pivot_longer(c(Price, Age, KM, Fuel_Type, HP, QuartTax, Weight, Guarantee, 
+                 BOVAG, Period),
+               names_to = 'Variable',
+               values_to = 'Value') %>%
+  group_by(Variable) %>%
+  summarize(Mean = mean(Value) %>%
+              round(2),
+            'Std. Deviation' = sd(Value) %>%
+              round(2),
+            Minimum = min(Value),
+            Maximum = max(Value)) %>%
+  kbl(align = c('l', 'r', 'r', 'r', 'r'),
+      caption = 'Summary Statistics') %>%
+  kable_classic()
+
+data %>%
+  select(c(Price, Age, KM, Fuel_Type, HP, QuartTax, Weight, Guarantee, BOVAG, 
+           Period)) %>%
+  ggpairs(progress = FALSE) +
+  theme_tufte(base_size = 8) +
+  theme(axis.text.x = element_blank(),
+        axis.text.y = element_blank()) + 
+  labs(title = 'Paired Plots and Correlations (Figure 2)',
+       x = 'Variables Values',
+       y = 'Variable Values')
+```
+
+\newpage
 
 # Analysis
 
@@ -17,5 +95,23 @@ To begin, a full model $(1)$ was fit using the default `stan_glm` priors ($N(0, 
 
 The full models fitted utilized $32$ predictors ($16$, not including dummy variables) for modeling. Using a large number of predictors can be damaging to a model due to redundancies in predictor information (multicollinearity) and the potential for overfitting. Several different variable selection methods were applied to the car prices data set to determine which predictors were most closely related with car price. First, a Bayesian variable selection method called a horseshoe prior was used to systematically exclude unimportant predictors from the model. A horseshoe prior places a large amount of prior mass near $0$, forcing predictors to be highly related with the response to be included in the model. This model $(3)$ determined $14$ predictors ($12$, not including dummy variables) to be significant in predicting car price: `Age`, `Mfg_Month`, `Mfg_Year`, `KM`, `Fuel_Type`, `HP`, `Metallic`, `QuartTax`, `Weight`, `Guarantee`, `BOVAG`, and `Period`. A follow-up model $(4)$ was fit using only these selected predictors, with only an inconsequential loss in $R^2$. Next, a model $(5)$ was fit using a variable selection method called LASSO that penalizes a model for producing large coefficient estimates, forcing it to be selective with how it chooses estimates (equivalent to using a Laplace prior). This model determined $15$ predictors ($12$, not including dummy variables) to be significant in predicting car price. These were the same predictors chosen by the horseshoe prior model previously fit. A follow-up model $(6)$ was fit using only these selected predictors, again with only an inconsequential loss in $R^2$ (DO WE NEED THIS MODEL?? ISNT IT THE SAME AS 4??). 
 
-Thirdly, a more contextual approach was taken to variable selection and predictors were chosen by researchers based on practical knowledge and exploratory data visualizations: `Age`, `KM`, `Fuel_Type`, `HP`, `QuartTax`, `Weight`, `Guarantee`, `BOVAG`, and `Period`. Intuitively, older cars (indicated by `Age` and `KM`) should be worth less and larger and more powerful cars (indicated by `Weight` and `HP`, respectively) should be worth more. It was assumed that cars that take different fuel types (`Fuel_Type`) are likely different kinds of cars and would likely vary in price in some way. Finally, `Guarantee`, `BOVAG`, and `Period` are financial-based incentives that should also intuitively lead to a higher car price. These predictors were selected independently of the results of the horseshoe and LASSO selections, but aligned closely with these selections nonetheless. First, a model $(7)$ was fit using these predictors and the `stan_glm` default priors. A follow-up model $(8)$ was then fit using using weakly informative priors informed by prior knowledge and exploratory data visualizations (ADD A TABLE OF THESE PRIORS!!). This model showed slightly less evidence of overfitting than the previous model but was otherwise similar. Finally, two models $(9)$ & $(10)$ were fit to explore potential interactions of interest. The first of these models included an interaction between `Age` and `KM`, and the second included an interaction between `Weight` and `HP`. 
+Thirdly, a more contextual approach was taken to variable selection and the predictors selected previously based on practical knowledge and data visualizations were used for modeling. These predictors were selected independently of the results of the horseshoe and LASSO selections, but aligned closely with these selections nonetheless. First, a model $(7)$ was fit using these predictors and the `stan_glm` default priors. A follow-up model $(8)$ was then fit using using weakly informative priors (Table 2) informed by prior knowledge and exploratory data visualizations. This model showed slightly less evidence of overfitting than the previous model but was otherwise similar. Finally, two models $(9)$ & $(10)$ were fit to explore potential interactions of interest. The first of these models included an interaction between `Age` and `KM`, and the second included an interaction between `Weight` and `HP`. 
 
+```{r, echo=FALSE, message=FALSE}
+data.frame(Variable = c('Age', 'KM', 'Fuel (Diesel)', 'Fuel (Petrol)', 'HP', 
+                        'Quarterly Tax', 'Weight', 'Manufacturer Guarantee', 
+                        'BOVAG Guarantee', 'Guarantee Period'),
+           PriorMean = as.character(c(-100, -0.0625, 1000, -1000, 50, 100, 10, 
+                                      1000, 0, 1000)),
+           PriorStdDev = as.character(c(625, 0.125, 62500, 62500, 100, 625, 
+                                        0.125, 62500, 100, 62500))) %>%
+  mutate('Prior Mean' = PriorMean,
+         'Prior Std. Deviation' = PriorStdDev) %>%
+  select(-c(PriorMean, PriorStdDev)) %>%
+  arrange(Variable) %>%
+  kbl(align = c('l', 'r', 'r'),
+      caption = 'Prior Parameters') %>%
+  kable_classic()
+```
+
+# Results
