--- a/conclusionSection.Rmd
+++ b/conclusionSection.Rmd
@@ -68,7 +68,7 @@ print(fit4, digits = 3)
 
 
 ## Interpretation and Discussion
-The intercept coefficient can be interpreted as the expected log(price) of a non-metallic, CNG-fueled car that was manufactured in January of 1999 with no manufacturer or BOVAG guarantee and a value of $0$ for all numeric predictors included in the model.  The coefficients estimates for the numeric predictors can be interpreted as the expected percent difference in predicted car price associated with a one standard deviation increase in the value of the predictor, with all other predictors remaining constant.  Overall, this model had an in-sample Bayesian $R^2$ value of 0.882 and a leave one out adjusted $R^2$ value of 0.87.  This confirms our model isn't overfitting while also showing a relatively high $R^2$ value.  
+The intercept coefficient can be interpreted as the expected log(price) of a non-metallic, CNG-fueled car that was manufactured in January of 1999 with no manufacturer or BOVAG guarantee and a value of $0$ for all numeric predictors included in the model.  The coefficients estimates for the numeric predictors can be interpreted as the expected percent difference in predicted car price associated with a one standard deviation increase in the value of the predictor, with all other predictors remaining constant.  Overall, this model had an in-sample Bayesian $R^2$ value of $0.882$ and a leave one out adjusted $R^2$ value of $0.87$.  This confirms our model isn't overfitting while also showing a relatively high $R^2$ value.  
 
 ## Predictive Plots
 The final fitted model should look like our data.  By drawing from the predictive distribution and comparing it to the distribution of the response variable, we can determine if our model is fitting appropriately.  In the plot below, we see our predictive distribution tracks the response distribution well increasing our confidence in the model.  
